<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFD700">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/admissionsTitle"
            android:text="@string/admissions_requirements"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="#003366"
            android:layout_marginBottom="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/admissionsInfo"
            android:text="@string/admissions_info"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/applicationLink"
            android:text="@string/apply_online"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#0066cc"
            android:layout_marginTop="20dp"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/international"
            android:text="@string/international"
            android:textSize="18sp"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/internationalLink"
            android:text="@string/click_here"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#0066cc"
            android:layout_marginTop="20dp"
            android:autoLink="web"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
